# webos-wayland-extensions

./: .gitignore  CMakeLists.txt  README.md  oss-pkg-info.yaml
client/: CMakeLists.txt
client/files/pkgconfig/: wayland-webos-client.pc.in
cmake/: wayland.cmake
protocol/: CMakeLists.txt  input-method.xml  text.xml  webos-extension.xml  webos-foreign.xml  webos-input-manager.xml  webos-shell.xml  webos-surface-group.xml  webos-system-ux.xml  webos-tablet.xml
server/: CMakeLists.txt
server/files/pkgconfig/: wayland-webos-server.pc.in
